buildscript {
	repositories {
		jcenter()
	}
	dependencies {
		classpath "com.commercehub.gradle.plugin:gradle-avro-plugin:0.19.1"
	}
}

plugins {
	id 'org.springframework.boot' version '2.4.3'
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
	id 'java-library'
	id 'idea'
}

apply plugin: "com.commercehub.gradle.plugin.avro"

group = 'com.ctf'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = JavaVersion.VERSION_14
	targetCompatibility = JavaVersion.VERSION_14
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://packages.confluent.io/maven/' }
}

dependencies {
	compileOnly 'org.projectlombok:lombok:1.18.20'
	annotationProcessor 'org.projectlombok:lombok:1.18.20'

	implementation "org.apache.avro:avro:1.10.2"
	implementation 'io.confluent:kafka-avro-serializer:6.2.0'

	implementation 'org.postgresql:postgresql'

	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.kafka:spring-kafka'

	implementation 'org.apache.commons:commons-lang3:3.12.0'

	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}

	testImplementation 'org.springframework.kafka:spring-kafka-test'
	testImplementation 'org.awaitility:awaitility:4.0.2'
	testRuntimeOnly 'com.h2database:h2:1.4.200'
	testCompileOnly 'org.projectlombok:lombok:1.18.20'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
}

test {
	useJUnitPlatform()
}

avro {
	fieldVisibility = "PRIVATE"
}
